backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
spec:
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
  selector:
    app: backend
