database-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: database-service
spec:
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
  selector:
    app: database
