frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
spec:
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: frontend
