backend-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: backend
spec:
  to:
    kind: Service
    name: backend-service
    weight: 100
  port:
    targetPort: 3001
  tls:
    termination: edge
  wildcardPolicy: None
