database-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: database-route
spec:
  to:
    kind: Service
    name: database-service
    weight: 100
  port:
    targetPort: 5432
  wildcardPolicy: None
