frontend-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend-route
spec:
  to:
    kind: Service
    name: frontend-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
